--- a/pom.xml
+++ b/pom.xml
@@ -66,11 +66,10 @@
       <artifactId>spigot-api</artifactId>
       <version>1.8-R0.1-SNAPSHOT</version>
       <scope>provided</scope>
-    </dependency>
-    <dependency>
+    </dependency><dependency>
       <groupId>com.github.orisis</groupId>
       <artifactId>guitoolkit-legacy</artifactId>
-      <version>1.0.5</version>
+      <version>2.0.0</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
