pas mal d'update et de fixs

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,9 @@
 name: SimpleUHC
 version: '${project.version}'
 main: fr.rammex.simpleuhc.SimpleUHC
+depend:
+  - GameAPI
+  - GUIToolkit
 commands:
   team:
     description: Manage teams
