Team Inventory Scenario

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -10,3 +10,8 @@ commands:
   simpleuhc:
     description: Main command for SimpleUHC
     permission: simpleuhc.admin
+  teaminventory:
+    description: Team Inventory
+    aliases:
+      - ti
+      - bp
