--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,10 @@
 
   <repositories>
       <repository>
+          <id>github</id>
+          <url>https://maven.pkg.github.com/orisis/GameAPI</url>
+      </repository>
+      <repository>
           <id>placeholderapi</id>
           <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
       </repository>
@@ -66,28 +70,31 @@
 
   <dependencies>
       <dependency>
+          <groupId>org.spigotmc</groupId>
+          <artifactId>spigot</artifactId>
+          <version>1.8.8</version>
+          <scope>system</scope>
+          <systemPath>${project.basedir}/libs/spigot-1.8.8.jar</systemPath>
+      </dependency>
+      <dependency>
           <groupId>me.clip</groupId>
           <artifactId>placeholderapi</artifactId>
           <version>2.11.6</version>
           <scope>provided</scope>
       </dependency>
-    <dependency>
-      <groupId>org.spigotmc</groupId>
-      <artifactId>spigot-api</artifactId>
-      <version>1.8-R0.1-SNAPSHOT</version>
-      <scope>provided</scope>
-    </dependency>
       <dependency>
       <groupId>com.github.orisis</groupId>
       <artifactId>guitoolkit-legacy</artifactId>
       <version>2.0.1</version>
-      <scope>provided</scope>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/libs/guitoolkit-legacy-2.0.1.jar</systemPath>
     </dependency>
     <dependency>
       <groupId>com.github.orisis</groupId>
       <artifactId>gameapi</artifactId>
-      <version>1.4.9</version>
-      <scope>provided</scope>
+      <version>1.4.9.1</version>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/libs/gameapi-1.4.9.1.jar</systemPath>
     </dependency>
 
   </dependencies>
